plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.antispam'
version = '0.1.0'

java {
    // Java 21 LTS is the project baseline; the Gradle toolchain pins it so the
    // build is reproducible regardless of the developer's default JDK.
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // Drives fail-fast validation of required service config (@Validated @NotBlank).
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Persistence: plain JDBC over Postgres, with Flyway-managed schema (the
    // immutability trigger lives in a migration, not application code).
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    runtimeOnly 'org.postgresql:postgresql'

    // RFC-822 parsing (Jakarta Mail / Angus implementation).
    implementation 'org.eclipse.angus:angus-mail:2.0.3'

    // Event spine: the ingest path publishes to the emails.raw Kafka topic
    // (story 02.01). spring-kafka supplies KafkaTemplate + KafkaAdmin (topic
    // provisioning); the JSON value serializer ships with it.
    implementation 'org.springframework.kafka:spring-kafka'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // Real Postgres in integration tests so the immutability trigger and
    // ON CONFLICT idempotency are exercised against the actual database.
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.testcontainers:postgresql'
    // Real broker for the Kafka spine integration test (story 02.01).
    testImplementation 'org.testcontainers:kafka'
    testImplementation 'org.springframework.kafka:spring-kafka-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Generates build-info.properties so /info reports the version + git commit,
// making any deployed build identifiable (acceptance criterion 3).
springBoot {
    buildInfo {
        properties {
            additional = [
                commit: gitCommit()
            ]
        }
    }
}

// Resolve the short git commit at configuration time, tolerating a missing
// .git (e.g. a source tarball) by falling back to "unknown".
def gitCommit() {
    try {
        def stdout = new ByteArrayOutputStream()
        exec {
            commandLine 'git', 'rev-parse', '--short', 'HEAD'
            standardOutput = stdout
            errorOutput = new ByteArrayOutputStream()
            ignoreExitValue = true
        }
        def commit = stdout.toString().trim()
        return commit.isEmpty() ? 'unknown' : commit
    } catch (ignored) {
        return 'unknown'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
